# ros_tracker

./: .gitignore
src/riki_line_follower/: CMakeLists.txt
src/riki_line_follower/src/: detect.cpp  linedetect.cpp  motion_node.cpp  rikirobot.cpp
src/track_pkg/: CMakeLists.txt  package.xml
src/track_pkg/config/: rosconsole.config
src/track_pkg/include/: follower.hpp  kcftracker.hpp  visual_tracker.hpp
src/track_pkg/launch/: gazebo_simulation.launch  track_simulation.launch  visual_track_simulation.launch
src/track_pkg/rviz/: visual_track.rviz
src/track_pkg/src/: .runtracker.cpp.swp  follower.cpp  kcftracker.cpp  runtracker.cpp  visual_tracker.cpp
src/track_pkg/urdf/: follower.urdf.xacro  leader.urdf.xacro
src/track_pkg/worlds/: track_world.world
